# pigale

./: AUTHORS  ChangeLog  Doxyfile  Makefile.am  Makefile.am.in  Makefile.in  README  config.h.in  configure  configure.ac  pigale.inc  pigale.inc.in  pigale.pro  runqmake.sh  wmake.bat  wpigale.inc  wqmake.bat  wqmakeMSCV.bat  wset.bat  wsetMSCV.bat
ClientServer/: ClientData.txt  ClientServer.pro  client.cpp  client.h
Doc/: bibliography.html  client.html  images.html  index.html  installation.html  license.html  license_Qt.html  main.txt  manual.html  sourceforge.head  style.css
UsingTgraph/: Readme.txt  UsingTgraph.pro  main.cpp
cgi/: Readme.txt  cgi.pro  client.cpp  client.h  pigale.cpp
freeglut/: freeglut.pro  freeglut_init.c
incl/: Pigale.h  config.h
incl/GL/: freeglut_std.h
incl/QT/: Action.h  Action_def.h  GLWindow.h  Handler.h  Misc.h  SymWindow.h  clientEvent.h  graphml.h  graphmlparser.h  grid.h  pigalePaint.h  pigaleQcolors.h  pigaleWindow_doc.h  staticData.h
incl/TAXI/: Channel.h  ConstraintList.h  CotreeCritical.h  DFSGraph.h  DFSLow.h  Dos.h  Errors.h  IntList.h  KantShel.h  MaxPath.h  SWShelling.h  SchPack.h  SchnyderWood.h  Tarray.h  Tbase.h  Tdebug.h  Tfile.h  Tflist.h  Tgdebug.h  Tgf.h  Tmessage.h  Tpoint.h  Tprop.h  Tpropio.h  Tproptgf.h  Tsmap.h  Tstack.h  Tstring.h  Tsvector.h  Ttimer.h  bicon.h  color.h  elmt.h  embed.h  embedrn.h  graph.h  graphs.h  lralgo.h  ndfs.h  netcut.h  (+5 more)
macro/: maxPlanar4Connex.mc
qt/: Action.awk  CanvasGrid.cpp  CanvasItem.cpp  CanvasSpring.cpp  ClientSocket.cpp  ClientSocket.h  EmbedCurves.cpp  GraphGL.cpp  GraphGL.h  GraphSym.cpp  GraphSym.h  GraphWidget.h  Handler.cpp  Macro.cpp  MiscQt.cpp  Settings.cpp  Test.cpp  glcontrolwidget.cpp  glcontrolwidget.h  gprop.cpp  gprop.h  graphml.cpp  graphmlparser.cpp  main.cpp  mouse_actions.cpp  mouse_actions.h  pigale.icns  pigale.rc  pigaleCanvas.cpp  pigaleFile.cpp  pigaleMenus.cpp  pigalePaint.cpp  pigaleUndo.cpp  pigaleWindow.cpp  pigaleWindow.h  pigale_fr.qm  pigale_fr.ts  qt.pro
qt/icones/: filenew.xpm  fileprint.xpm  film.xpm  help.xpm  info.xpm  left.xpm  macroplay.xpm  redo.xpm  reload.xpm  right.xpm  sfilesave.xpm  sleft.xpm  sleftarrow.xpm  sreload.xpm  sright.xpm  srightarrow.xpm  sup.xpm  xman.xpm
tgf/: a.txt  aa.txt  b.txt  cex.txt  cylinder.tgf  embed3d.graphml
tgraph/: 3-ConOrientTriang.cpp  3-ConShelling1.cpp  3-ConShelling2.cpp  BFS.cpp  Barycenter.cpp  Biconnect.cpp  BipPlanarize.cpp  Bipolar.cpp  CotreeCritical.cpp  DFS.cpp  DFSGraph.cpp  DFSMap.cpp  Debug.cpp  Diagonalise.cpp  Embed2Pages.cpp  EmbedCCD.cpp  EmbedFPP.cpp  EmbedPolrec.cpp  EmbedPolyline.cpp  EmbedTutteCircle.cpp  EmbedVision.cpp  FastTwit.cpp  File.cpp  Generate.cpp  GeoAlgs.cpp  Graph.cpp  HeapSort.cpp  LR-Algo.cpp  LR-Map.cpp  MaxPlanar.cpp  NewPolar.cpp  NpBiconnect.cpp  PSet.cpp  Planar.cpp  PropName.cpp  PropStd.cpp  PropTgf.cpp  STList.cpp  SWShelling.cpp  SchaefferGen.cpp  (+17 more)
